# MTMspring

./: CMakeLists.txt  Makefile  Techniovision.i  eurovision.c  eurovision.cpp  eurovision.h  hw2.py  judge.c  judge.h  new_map.c  new_map.h  run_face_tests.py  state.c  state.h  stdout_redirector.py  utilities.c  utilities.h
Dry/: DryDoc.docx  mainA.c  mainB.c
euro_tests/generate/: main.py  utils.c
face_tests_part1/: finaltest.cpp  test1.cpp  test10.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
tests/: eurovisionTests.c  map_example_test.c
